for Java 9 - use valueOf